subo algunas modificaciones de lo correspondiente a la pagina #1

--- a/index.html
+++ b/index.html
@@ -3,22 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>the dog square</title>
+    <title>mascotas</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <div class="head">
+        <div class="superior">
+            <a href="#">THE DOG SQUARE</a>
+        </div>
 
+        <nav class="navegacion">
+            <a href="#">IMAGENES</a>
+            <a href="#">CARACTERISTICAS</a>
+            <a href="#">TABLA</a>
+            <a href="#">CONTACTOS</a>
         </nav>
-    </header>
-    <div>
-        <section>
-
-        </section>
-        <aside>
-            
-        </aside>
     </div>
-    
+    <br>
+    <br>
+
+
+    <header class="content header">
+        <h1 class="title">HISTORIA</h1>
+        <p class="texto_descripcion">
+            En este sitio web podras encontrar una detallada narrativa sobre la historia
+            de estas dos hermosas y fascinantes mascotas (Guardian y Gurigury).
+            Ellos nacieron en el segundo parto de su madre (Natacha) un 3 de enero de
+            2009 los cuales fueron acogidos con mucho apreceio por los habitantes de
+            dicho hogar , quienes les brindaron un techo, comida y mucho mas, estas
+            dos mascotas fueron dos de 6 hermanitos que nacieron junto con ellos los 
+            cuales a media del tiempo adquirieron enfermedades lo cual solo se podria
+            solucionar con medicina  sin embargo la  familia no podia adquirir ya 
+            que esta se encontraba a un costo muy elevado.
+            Por esa epoca nacion un hermoso pequeño a alegrar la vida de esta familia, 
+            estas mascotas acompañaron toda la  niñez  de este niño  el cual crecio junto
+            con ellos entre juegos y risas y hasta la fecha a un siguen alegrando la vida
+            de esta familia
+        </p>
+    </header>
+    <hr>
+    <footer class="inferior">
+        <p class="textoinferior">
+            THE DOG SQUARE
+        </p>
+
+    </footer>
+</main>
 </body>
 </html>
