cargo modificaciones en la pagina #1

--- a/index.html
+++ b/index.html
@@ -23,24 +23,33 @@
     <br>
 
 
-    <header class="content header">
-        <h1 class="title">HISTORIA</h1>
-        <p class="texto_descripcion">
-            En este sitio web podras encontrar una detallada narrativa sobre la historia
-            de estas dos hermosas y fascinantes mascotas (Guardian y Gurigury).
-            Ellos nacieron en el segundo parto de su madre (Natacha) un 3 de enero de
-            2009 los cuales fueron acogidos con mucho apreceio por los habitantes de
-            dicho hogar , quienes les brindaron un techo, comida y mucho mas, estas
-            dos mascotas fueron dos de 6 hermanitos que nacieron junto con ellos los 
-            cuales a media del tiempo adquirieron enfermedades lo cual solo se podria
-            solucionar con medicina  sin embargo la  familia no podia adquirir ya 
-            que esta se encontraba a un costo muy elevado.
-            Por esa epoca nacion un hermoso pequeño a alegrar la vida de esta familia, 
-            estas mascotas acompañaron toda la  niñez  de este niño  el cual crecio junto
-            con ellos entre juegos y risas y hasta la fecha a un siguen alegrando la vida
-            de esta familia
-        </p>
-    </header>
+    <section>
+        <div>
+            <h1 class="title">HISTORIA</h1>
+            <br>
+            <p class="texto_descripcion">
+                En este sitio web podras encontrar una detallada narrativa sobre
+                 la historia de estas dos hermosas y fascinantes mascotas 
+                (Guardian y Gurigury).<br>
+                Ellos nacieron en el segundo parto de su madre (Natacha) un 3
+                 de enero de 2009 los cuales fueron acogidos con mucho
+                apreceio por los habitantes de dicho hogar , quienes les 
+                brindaron un techo, comida y mucho mas, estas dos mascotas 
+                fueron dos de 6 hermanitos que nacieron junto con ellos los 
+                cuales a medida del tiempo adquirieron enfermedades lo cual solo 
+                se podria solucionar con medicina  sin embargo la  familia
+                no podia adquirir ya que esta se encontraba a un costo 
+                muy elevado.<br>
+                Por esa epoca nacion un hermoso pequeño a alegrar la vida de 
+                esta familia, estas mascotas acompañaron toda la  niñez  de 
+                este niño  el cual crecio junto con ellos entre juegos y risas y 
+                hasta la fecha a un siguen alegrando la vida de esta familia
+            </p>
+        </div>
+        <div class="imagen1">
+            <img src="assets/images/1.png" alt="">
+        </div>
+    </section>
     <hr>
     <footer class="inferior">
         <p class="textoinferior">
