cargo la parte principal de las paginas restantes y una pequeña modificacion en la pagina #2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mascotas</title>
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
     <div class="head">
@@ -13,10 +14,10 @@
         </div>
 
         <nav class="navegacion">
-            <a href="#">IMAGENES</a>
-            <a href="#">CARACTERISTICAS</a>
-            <a href="#">TABLA</a>
-            <a href="#">CONTACTOS</a>
+            <a href="pagina2.html">IMAGENES</a>
+            <a href="pagina3.html">CARACTERISTICAS</a>
+            <a href="pagina4.html">TABLA</a>
+            <a href="pagina5.html">CONTACTOS</a>
         </nav>
     </div>
     <br>
@@ -47,7 +48,7 @@
             </p>
         </div>
         <div class="imagen1">
-            <img src="assets/images/1.png" alt="">
+            <img src="assets/images/1.png" alt="texto">
         </div>
     </section>
     <hr>
