cargo imagenes y algunas modificaciones en la pagian nuemro 3, cada scrip con los css esenciale

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="head">
         <div class="superior">
-            <a href="#">THE DOG SQUARE</a>
+            <a href="index.html">THE DOG SQUARE</a>
         </div>
 
         <nav class="navegacion">
