--- a/pagina2.html
+++ b/pagina2.html
@@ -29,6 +29,11 @@
         <div class="video">
             <video src="assets/videos/WhatsApp Video 2024-06-09 at 9.26.47 PM.mp4"></video>
         </div>
+        <div class="3imagenes">
+            <img src="assets/images/2.png" alt="">
+            <img src="assets/images/3.png" alt="">
+            <img src="assets/images/4.png" alt="">
+        </div>
        
     </section>
     <hr>
