cargo modificaciones en la pagina #3 junto con sus Style

--- a/pagina3.html
+++ b/pagina3.html
@@ -46,54 +46,54 @@
             apreciada por las familias 
         </P>
     </section>
+    <section class="texto2">
+        <p>
+          Masa corporal
+             Los machos, 16-27 kilos. Las hembras, 14-23 kilos.
+             Colores
+             Hay pitbulls de varios colores:
+         </p>
+    </section>
     <section>
-        <section class="texto2">
-          <!--   <p>
-             Masa corporal
-                Los machos, 16-27 kilos. Las hembras, 14-23 kilos.
-                Colores
-                Hay pitbulls de varios colores:
-            </p>
-        <div>
-            <p class="medio">
-                <ul >
-                    <li>Blanco</li>
-                    <li>Negro</li>
-                    <li>Blanco y negro</li>
-                    <li>Rojo</li>
-                    <li>Fuego</li>
-                    <li>Azul</li>
-                    <li>Marrón_azulado</li>
-                    <li>Marrón_blanquecino</li>
-                    <li>Atigrado</li>
-                    <li>Tricolor</li>
-                    <li>Merlé</li>
-                    <li>Amarillo</li>
-                    <li>Chocolate</li>
-                </ul>
-            </p>
-        </div>
-            <p class="texto3">
-                Altura
-                Hasta 50 cm.
-                Nombre científico
-                Canis lupus familiaris
-                ordida
-                Entre 17 y 23 PSI.  
-            </p>
         <section>
-    </section>-->
-
-
-
-
-    
-    
+            <div  class="alinear">
+                <p >
+                    <ul class="medios">
+                        <li>Blanco</li>
+                        <li>Negro</li>
+                        <li>Blanco y negro</li>
+                        <li>Rojo</li>
+                        <li>Fuego</li>
+                        <li>Azul</li>
+                        <li>Marrón_azulado</li>
+                        <li>Marrón_blanquecino</li>
+                        <li>Atigrado</li>
+                        <li>Tricolor</li>
+                        <li>Merlé</li>
+                        <li>Amarillo</li>
+                        <li>Chocolate</li>
+                    </ul>
+                </p>
+            </div>
+        </section>
+        <div class="imagenperro">
+            <img src="assets/images/8.png" alt="">
+        </div>
+        </section>
+    <section>
+        <p class="texto3">
+            Altura
+            Hasta 50 cm.
+            Nombre científico
+            Canis lupus familiaris
+            ordida
+            Entre 17 y 23 PSI.  
+        </p>
+    </section>
     <footer class="inferior">
         <p class="textoinferior">
             THE DOG SQUARE
         </p>
-
     </footer>
 </main>
 </body>
