--- a/pagina3.html
+++ b/pagina3.html
@@ -10,7 +10,7 @@
 <body>
     <div class="head">
         <div class="superior">
-            <a href="#">THE DOG SQUARE</a>
+            <a href="index.html">THE DOG SQUARE</a>
         </div>
 
         <nav class="navegacion">
