cargo modificaciones en el scrip #5 junto con sus Style

--- a/pagina5.html
+++ b/pagina5.html
@@ -24,11 +24,17 @@
 
     <div class="formulario">
         <form action="pagina5.html" method="post">
-            <label for="nombre">Nombres</label>
-            <input class="nombre" type="text" id="nombre" name="nombre">
+        <div class="dos">
+            <div>
+                <label for="nombre">Nombres</label>
+                <input class="nombre" type="text" id="nombre" name="nombre">
+            </div>
             <br>
-            <label for="apellidos">Apellidos</label>
-            <input class="apellidos" type="text" id="apellidos" name="apellidos">
+            <div>
+                <label for="apellidos">Apellidos</label>
+                <input class="apellidos" type="text" id="apellidos" name="apellidos">
+            </div>
+        </div>
             <br>
             <label for="email">Email</label>
             <input class="email" type="text" id="email" name="email">
@@ -36,10 +42,10 @@
             <label for="mensaje">Mensaje</label>
             <input class="mensaje" type="text" id="mensaje" name="mensaje">
             <br>
-            <input type="submit" value="Enviar">
+            <input class="enviar" type="submit" value="Enviar">
         </form>
-
     </div>
+    
 
 
     
