--- a/pagina3.html
+++ b/pagina3.html
@@ -57,7 +57,7 @@
     <section>
         <section>
             <div  class="alinear">
-                <p >
+                <p>
                     <ul class="medios">
                         <li>Blanco</li>
                         <li>Negro</li>
@@ -76,8 +76,8 @@
                 </p>
             </div>
         </section>
-        <div class="imagenperro">
-            <img src="assets/images/8.png" alt="">
+        <div >
+            <img class="img4-4" src="assets/images/8.png" alt="">
         </div>
         </section>
     <section>
