cargo modificaciones en los distintos Scrip junto con sus Style

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <br>
 
 
-    <section>
-        <div>
+    <section >
+        <div class="todo">
             <h1 class="title">HISTORIA</h1>
             <br>
             <p class="texto_descripcion">
@@ -35,7 +35,7 @@
                 Ellos nacieron en el segundo parto de su madre (Natacha) un 3
                  de enero de 2009 los cuales fueron acogidos con mucho
                 apreceio por los habitantes de dicho hogar , quienes les 
-                brindaron un techo, comida y mucho mas, estas dos mascotas 
+                brindaron un techo, comida y mucho mas,estas dos mascotas 
                 fueron dos de 6 hermanitos que nacieron junto con ellos los 
                 cuales a medida del tiempo adquirieron enfermedades lo cual solo 
                 se podria solucionar con medicina  sin embargo la  familia
@@ -47,8 +47,8 @@
                 hasta la fecha a un siguen alegrando la vida de esta familia
             </p>
         </div>
-        <div class="imagen1">
-            <img src="assets/images/1.png" alt="texto">
+        <div >
+            <img class="imagen1" src="assets/images/1.png" alt="texto">
         </div>
     </section>
 
