--- a/pagina3.html
+++ b/pagina3.html
@@ -50,8 +50,8 @@
         <p>
           Masa corporal
              Los machos, 16-27 kilos. Las hembras, 14-23 kilos.
-             Colores
-             Hay pitbulls de varios colores:
+             Colores.
+             Hay pitbulls de <br> varios  colores:
          </p>
     </section>
     <section>
@@ -90,6 +90,23 @@
             Entre 17 y 23 PSI.  
         </p>
     </section>
+
+    <div>
+        
+    </div>
+
+    <div>
+        <p class="ultimo">Es considerada una raza peligrosa, pero los perros pitbull pueden llegar a ser
+             muy cariñosos. Un buen entrenamiento desde cachorros es la clave. 
+             Te contamos esto y mucho más en este vídeo.
+        </p>
+    </div>
+
+
+
+
+
+
     <footer class="inferior">
         <p class="textoinferior">
             THE DOG SQUARE
