cargo video junto con sus Style

--- a/pagina3.html
+++ b/pagina3.html
@@ -92,7 +92,15 @@
     </section>
 
     <div>
-        
+        <video class="video" muted  controls autoplay>
+            <source src="assets/videos/video2.mp4" type="video/mp4"> 
+            <p class="descarga">
+                tu navegador no soporta este formato.Clik para descargar
+                <a href="assets/videos/video2.mp4"></a>
+
+            </p>
+
+        </video>
     </div>
 
     <div>
