cargo modificaciones en con respecto a la tabla junto con sus Style

--- a/pagina4.html
+++ b/pagina4.html
@@ -51,14 +51,14 @@
                 <th>TEMPERAMENTO</th>
             </tr>
                
-            <tr>
+            <tr class="linea">
                 <td>GUARDIAN</td>
                 <td>18-29 kg</td>
                 <td>41 cm</td>
                 <td>Pitbull</td>
                 <td>Agresivo</td>
             </tr>
-            <tr>
+            <tr class="lin2">
                 <td>GURIGURY</td>
                 <td>18-29 kg</td>
                 <td>45 cm</td>
