--- a/pagina5.html
+++ b/pagina5.html
@@ -52,7 +52,7 @@
             <label for="mensaje">Mensaje</label>
             <input class="mensaje" type="text" id="mensaje" name="mensaje">
             <br>
-            <input class="enviar" type="submit" value="Enviar">
+            <input class="enviar"  type="button" value="Enviar" onclick="alert ('! INFORMACIÓN INVALIDA ¡')">
         </form>
     </div>
     <br>
